# simple_camera

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  test_algo.cpp
src/algorithm/include/interface_algo/: interface_algorithm.hpp
src/algorithm/include/test_algo/: test_algo.hpp
src/app/: CMakeLists.txt  main.cpp
src/camera/: CMakeLists.txt  hikvision_camera.cpp  opencv_camera.cpp
src/camera/include/hikvision/: hikvision_camera.hpp
src/camera/include/interface/: interface_camera.hpp
src/camera/include/interface_camera/: interface_camera.hpp
src/camera/include/opencv_camera/: opencv_camera.hpp
src/core/: CMakeLists.txt  core.cpp  frame_lock_free_queue.cpp  frame_pool.cpp
src/core/include/frame/: frame.hpp  frame_lock_free_queue.hpp  frame_pool.hpp
src/pipeline/: CMakeLists.txt  vision_pipeline.cpp
src/pipeline/include/vision_pipeline/: vision_pipeline.hpp
src/renderer/: CMakeLists.txt  opencv_renderer.cpp
src/renderer/include/opencv_renderer/: opencv_renderer.hpp
tests/: CMakeLists.txt  test_frame_pool.cpp  test_frame_queue.cpp
